quoin-macros-tests/tests/ui/component_unexpected_ident_fail.rs
use quoin_macros::component;

component! {
    TestTypo {
        rendr { // typo: should be "render"
            "hello"
        }
    }
}

fn main() {}
